cmake_minimum_required(VERSION 3.20)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 1.cpp)
add_executable(3 3.cpp)
add_executable(22 22.cpp)
add_executable(26 26.cpp)
add_executable(27 27.cpp)
add_executable(34 34.cpp)
add_executable(35 35.cpp)
add_executable(54 54.cpp)
add_executable(59 59.cpp)
add_executable(69 69.cpp)
add_executable(76 76.cpp)
add_executable(203 203.cpp)
add_executable(206 206.cpp)
add_executable(209 209.cpp)
add_executable(283 283.cpp)
add_executable(367 367.cpp)
add_executable(704 704.cpp)
add_executable(707 707.cpp)
add_executable(844 844.cpp)
add_executable(904 904.cpp)
add_executable(977 977.cpp)
add_executable(1509 1509.cpp)