cmake_minimum_required(VERSION 3.20)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 1.cpp)
add_executable(3 3.cpp)
add_executable(15 15.cpp)
add_executable(18 18.cpp)
add_executable(19 19.cpp)
add_executable(24 24.cpp)
add_executable(26 26.cpp)
add_executable(27 27.cpp)
add_executable(34 34.cpp)
add_executable(35 35.cpp)
add_executable(49 49.cpp)
add_executable(54 54.cpp)
add_executable(59 59.cpp)
add_executable(69 69.cpp)
add_executable(76 76.cpp)
add_executable(142 142.cpp)
add_executable(202 202.cpp)
add_executable(203 203.cpp)
add_executable(206 206.cpp)
add_executable(209 209.cpp)
add_executable(242 242.cpp)
add_executable(283 283.cpp)
add_executable(349 349.cpp)
add_executable(350 350.cpp)
add_executable(367 367.cpp)
add_executable(383 383.cpp)
add_executable(438 438.cpp)
add_executable(454 454.cpp)
add_executable(704 704.cpp)
add_executable(707 707.cpp)
add_executable(844 844.cpp)
add_executable(904 904.cpp)
add_executable(977 977.cpp)
add_executable(1509 1509.cpp)